--- a/5b-Geocoding/geocoding.ipynb
+++ b/5b-Geocoding/geocoding.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:19:28.005864Z",
-     "iopub.status.busy": "2022-12-01T15:19:28.005456Z",
-     "iopub.status.idle": "2022-12-01T15:19:28.011758Z",
-     "shell.execute_reply": "2022-12-01T15:19:28.010617Z",
-     "shell.execute_reply.started": "2022-12-01T15:19:28.005819Z"
+     "iopub.execute_input": "2022-12-02T19:36:58.257495Z",
+     "iopub.status.busy": "2022-12-02T19:36:58.257102Z",
+     "iopub.status.idle": "2022-12-02T19:36:58.261940Z",
+     "shell.execute_reply": "2022-12-02T19:36:58.261184Z",
+     "shell.execute_reply.started": "2022-12-02T19:36:58.257452Z"
     },
     "tags": []
    },
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:19:30.126635Z",
-     "iopub.status.busy": "2022-12-01T15:19:30.126303Z",
-     "iopub.status.idle": "2022-12-01T15:19:30.132726Z",
-     "shell.execute_reply": "2022-12-01T15:19:30.131896Z",
-     "shell.execute_reply.started": "2022-12-01T15:19:30.126602Z"
+     "iopub.execute_input": "2022-12-02T19:36:59.287477Z",
+     "iopub.status.busy": "2022-12-02T19:36:59.287225Z",
+     "iopub.status.idle": "2022-12-02T19:36:59.292415Z",
+     "shell.execute_reply": "2022-12-02T19:36:59.291682Z",
+     "shell.execute_reply.started": "2022-12-02T19:36:59.287450Z"
     },
     "tags": []
    },
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:19:31.722738Z",
-     "iopub.status.busy": "2022-12-01T15:19:31.721259Z",
-     "iopub.status.idle": "2022-12-01T15:19:41.400985Z",
-     "shell.execute_reply": "2022-12-01T15:19:41.399879Z",
-     "shell.execute_reply.started": "2022-12-01T15:19:31.722684Z"
+     "iopub.execute_input": "2022-12-02T19:37:00.417239Z",
+     "iopub.status.busy": "2022-12-02T19:37:00.416991Z",
+     "iopub.status.idle": "2022-12-02T19:37:11.304199Z",
+     "shell.execute_reply": "2022-12-02T19:37:11.303342Z",
+     "shell.execute_reply.started": "2022-12-02T19:37:00.417213Z"
     },
     "tags": []
    },
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-30T20:21:07.526972Z",
-     "iopub.status.busy": "2022-11-30T20:21:07.526586Z",
-     "iopub.status.idle": "2022-11-30T20:21:07.531377Z",
-     "shell.execute_reply": "2022-11-30T20:21:07.530370Z",
-     "shell.execute_reply.started": "2022-11-30T20:21:07.526929Z"
+     "iopub.execute_input": "2022-12-02T19:46:45.342329Z",
+     "iopub.status.busy": "2022-12-02T19:46:45.341776Z",
+     "iopub.status.idle": "2022-12-02T19:46:45.347325Z",
+     "shell.execute_reply": "2022-12-02T19:46:45.346392Z",
+     "shell.execute_reply.started": "2022-12-02T19:46:45.342266Z"
     },
     "tags": []
    },
@@ -100,15 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:43:11.640484Z",
-     "iopub.status.busy": "2022-12-01T15:43:11.640216Z",
-     "iopub.status.idle": "2022-12-01T15:43:11.873743Z",
-     "shell.execute_reply": "2022-12-01T15:43:11.872979Z",
-     "shell.execute_reply.started": "2022-12-01T15:43:11.640454Z"
-    }
+     "iopub.execute_input": "2022-12-02T19:46:45.895564Z",
+     "iopub.status.busy": "2022-12-02T19:46:45.895274Z",
+     "iopub.status.idle": "2022-12-02T19:46:46.089832Z",
+     "shell.execute_reply": "2022-12-02T19:46:46.088856Z",
+     "shell.execute_reply.started": "2022-12-02T19:46:45.895534Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -117,7 +118,7 @@
        "803491"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,15 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:43:22.345081Z",
-     "iopub.status.busy": "2022-12-01T15:43:22.344697Z",
-     "iopub.status.idle": "2022-12-01T15:43:22.351333Z",
-     "shell.execute_reply": "2022-12-01T15:43:22.350486Z",
-     "shell.execute_reply.started": "2022-12-01T15:43:22.345040Z"
-    }
+     "iopub.execute_input": "2022-12-02T19:46:46.790338Z",
+     "iopub.status.busy": "2022-12-02T19:46:46.789968Z",
+     "iopub.status.idle": "2022-12-02T19:46:46.797285Z",
+     "shell.execute_reply": "2022-12-02T19:46:46.795993Z",
+     "shell.execute_reply.started": "2022-12-02T19:46:46.790294Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -145,7 +147,7 @@
        "803491"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:19:56.676216Z",
-     "iopub.status.busy": "2022-12-01T15:19:56.675909Z",
-     "iopub.status.idle": "2022-12-01T15:19:58.118452Z",
-     "shell.execute_reply": "2022-12-01T15:19:58.117314Z",
-     "shell.execute_reply.started": "2022-12-01T15:19:56.676182Z"
+     "iopub.execute_input": "2022-12-02T19:46:47.271116Z",
+     "iopub.status.busy": "2022-12-02T19:46:47.270809Z",
+     "iopub.status.idle": "2022-12-02T19:46:48.795685Z",
+     "shell.execute_reply": "2022-12-02T19:46:48.794408Z",
+     "shell.execute_reply.started": "2022-12-02T19:46:47.271079Z"
     },
     "tags": []
    },
@@ -175,7 +177,8 @@
       "Original length:  803491\n",
       "After removing those with no address data:  695084\n",
       "After removing those already with lat/lon:  239396\n",
-      "After removing duplicates:  158337\n"
+      "After removing duplicates:  158337\n",
+      "sample:  5\n"
      ]
     }
    ],
@@ -199,19 +202,20 @@
     "print('After removing duplicates: ', len(df))\n",
     "\n",
     "# For testing\n",
-    "# df = df.sample(100)"
+    "df = df.sample(5)\n",
+    "print('sample: ', len(df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-30T20:21:11.246671Z",
-     "iopub.status.busy": "2022-11-30T20:21:11.246345Z",
-     "iopub.status.idle": "2022-11-30T20:21:11.262186Z",
-     "shell.execute_reply": "2022-11-30T20:21:11.261413Z",
-     "shell.execute_reply.started": "2022-11-30T20:21:11.246638Z"
+     "iopub.execute_input": "2022-12-02T19:40:07.173121Z",
+     "iopub.status.busy": "2022-12-02T19:40:07.172795Z",
+     "iopub.status.idle": "2022-12-02T19:40:07.179725Z",
+     "shell.execute_reply": "2022-12-02T19:40:07.178835Z",
+     "shell.execute_reply.started": "2022-12-02T19:40:07.173092Z"
     },
     "tags": []
    },
@@ -219,22 +223,10 @@
     {
      "data": {
       "text/plain": [
-       "QC    122758\n",
-       "ON     19893\n",
-       "BC     14042\n",
-       "AB       216\n",
-       "NT        81\n",
-       "SK        66\n",
-       "MB        47\n",
-       "NB        19\n",
-       "NS         5\n",
-       "YT         3\n",
-       "NL         2\n",
-       "PE         1\n",
-       "Name: province, dtype: int64"
+       "5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-30T20:21:12.987164Z",
-     "iopub.status.busy": "2022-11-30T20:21:12.986872Z",
-     "iopub.status.idle": "2022-11-30T20:21:13.002901Z",
-     "shell.execute_reply": "2022-11-30T20:21:13.002174Z",
-     "shell.execute_reply.started": "2022-11-30T20:21:12.987133Z"
+     "iopub.execute_input": "2022-12-02T19:40:10.870914Z",
+     "iopub.status.busy": "2022-12-02T19:40:10.870660Z",
+     "iopub.status.idle": "2022-12-02T19:40:10.878318Z",
+     "shell.execute_reply": "2022-12-02T19:40:10.877651Z",
+     "shell.execute_reply.started": "2022-12-02T19:40:10.870888Z"
     },
     "tags": []
    },
@@ -263,48 +255,12 @@
     {
      "data": {
       "text/plain": [
-       "QC_Etablissements.csv                                       119141\n",
-       "ON_York_Region_Business_Directory.csv                        10418\n",
-       "ON_Toronto_Business_Licences.csv                             10053\n",
-       "BC_Liquor_licences.csv                                        5765\n",
-       "BC_Richmond_Based_Businesses.csv                              3544\n",
-       "QC_Sherbrooke_Entreprises.csv                                 3445\n",
-       "BC_Chilliwack_Business_Licences.csv                           2068\n",
-       "BC_Vancouver_Business_Licences.csv                            1334\n",
-       "Indigenous_Business_Directory.csv                             1004\n",
-       "BC_Kelowna_Business_Licence.csv                                709\n",
-       "BC_Prince_George_Business_Licence.csv                          194\n",
-       "BC_Burnaby_Business_Licences.csv                               138\n",
-       "ON_Hamilton_Licenced_Food_Establishments.csv                    91\n",
-       "ON_Ottawa_Cultural_Businesses.csv                               66\n",
-       "NT_Yellowknife_Business_Directory.csv                           58\n",
-       "ON_Hamilton_Licenced_Public_Garages.csv                         56\n",
-       "ON_Hamilton_Licenced_Basic_Food_Shops.csv                       52\n",
-       "ON_Welland_Business_Directory.csv                               46\n",
-       "ON_Mississauga_Business_Directory.csv                           43\n",
-       "BC_Surrey_Business_Licences.csv                                 29\n",
-       "BC_New_Westminster_Business_Licences_(Residents).csv            18\n",
-       "BC_Maple_Ridge_Business_Licences.csv                             8\n",
-       "BC_Langley_Business_Licences.csv                                 7\n",
-       "AB_Calgary_Business_Licences.csv                                 7\n",
-       "BC_Squamish_Business_Licence_Annual_2021.csv                     6\n",
-       "ON_Hamilton_Licenced_Salvage_Yards.csv                           5\n",
-       "ON_Hamilton_Licenced_Public_Halls.csv                            5\n",
-       "AB_Banff_Business_Licences.csv                                   4\n",
-       "ON_Pickering_Business_Directory.csv                              3\n",
-       "ON_Hamilton_Licenced_Second_Hand_Shops.csv                       3\n",
-       "BC_Port_Moody_Business_Directory.csv                             3\n",
-       "BC_Wineries.csv                                                  3\n",
-       "ON_Hamilton_Licenced_Places_of_Amusement.csv                     2\n",
-       "ON_Hamilton_Licenced_Kennels_and_Pet_Shops.csv                   2\n",
-       "BC_New_Westminster_Business_Licences_(New_this_Year).csv         2\n",
-       "BC_Nanaimo_Business_Licences.csv                                 2\n",
-       "MB_Indigenous_AFOA.csv                                           2\n",
-       "ON_Hamilton_Licenced_Residential_Care_Facilities.csv             1\n",
+       "QC_Etablissements.csv               3\n",
+       "ON_Toronto_Business_Licences.csv    2\n",
        "Name: localfile, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-01T15:20:10.994898Z",
-     "iopub.status.busy": "2022-12-01T15:20:10.994493Z",
-     "iopub.status.idle": "2022-12-01T15:20:12.319794Z",
-     "shell.execute_reply": "2022-12-01T15:20:12.319040Z",
-     "shell.execute_reply.started": "2022-12-01T15:20:10.994852Z"
+     "iopub.execute_input": "2022-12-02T19:46:54.620169Z",
+     "iopub.status.busy": "2022-12-02T19:46:54.619791Z",
+     "iopub.status.idle": "2022-12-02T19:46:54.630427Z",
+     "shell.execute_reply": "2022-12-02T19:46:54.629332Z",
+     "shell.execute_reply.started": "2022-12-02T19:46:54.620128Z"
     },
     "tags": []
    },
@@ -332,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "158337\n"
+      "5\n"
      ]
     }
    ],
@@ -357,11 +313,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-30T20:22:56.804707Z",
-     "iopub.status.busy": "2022-11-30T20:22:56.804314Z"
+     "iopub.execute_input": "2022-12-02T20:07:37.792206Z",
+     "iopub.status.busy": "2022-12-02T20:07:37.791927Z",
+     "iopub.status.idle": "2022-12-02T20:07:37.796308Z",
+     "shell.execute_reply": "2022-12-02T20:07:37.795563Z",
+     "shell.execute_reply.started": "2022-12-02T20:07:37.792178Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = df.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-02T20:12:44.066970Z",
+     "iopub.status.busy": "2022-12-02T20:12:44.066693Z",
+     "iopub.status.idle": "2022-12-02T20:12:47.007397Z",
+     "shell.execute_reply": "2022-12-02T20:12:47.006695Z",
+     "shell.execute_reply.started": "2022-12-02T20:12:44.066941Z"
     },
     "tags": []
    },
@@ -370,29 +347,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AB\n",
-      "Number to geocode:  216\n",
+      "QC\n",
+      "Number to geocode:  2\n",
       "BC\n",
-      "Number to geocode:  14042\n"
+      "Number to geocode:  0\n",
+      "DONE. Seconds elapsed:  2.93\n"
      ]
     }
    ],
    "source": [
+    "# Set a timer\n",
+    "t1 = time.time()\n",
+    "\n",
     "# Reset arrays for collecting our results\n",
     "JSONS = []\n",
     "JSONS_CITIES = []\n",
     "JSONS_ALL = []\n",
     "\n",
-    "# Set a timer\n",
-    "t1 = time.time()\n",
-    "\n",
     "# loop through dataframe by province\n",
     "for province in provinces:\n",
+    "    \n",
+    "    # Reset arrays for collecting our results\n",
+    "    JSONS = []\n",
+    "    JSONS_CITIES = []\n",
     "    \n",
     "    df2 = df[df['province'] == province]\n",
     "    print(province)\n",
     "    print('Number to geocode: ', len(df2))\n",
     "    reqs_gc = list(df2['gc_request_street'])\n",
+    "    idxs = list(df2['idx'])\n",
     "\n",
     "    # Loop through each request\n",
     "    for i in range(len(reqs_gc)):\n",
@@ -432,6 +415,9 @@
     "        except requests.exceptions.ConnectionError:\n",
     "            print(\"Connection refused for query: \", query_gc) \n",
     "            resp = ''\n",
+    "        \n",
+    "        # Add data id's to json\n",
+    "        resp['idx'] = idxs[i]\n",
     "    \n",
     "        # Append to array of results\n",
     "        JSONS.append(resp)\n",
@@ -446,7 +432,8 @@
     "# create a big json dump at the end\n",
     "with open('data/geocoded.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(JSONS_ALL, f, ensure_ascii=False, indent=4) \n",
-    "    \n",
+    "\n",
+    "t2 = time.time()\n",
     "print('DONE. Seconds elapsed: ', str(round(t2-t1, 2)))"
    ]
   },
