--- a/9-Analysis/Count_Analysis.ipynb
+++ b/9-Analysis/Count_Analysis.ipynb
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-29T16:53:34.409627Z",
-     "iopub.status.busy": "2022-11-29T16:53:34.409232Z",
-     "iopub.status.idle": "2022-11-29T16:53:34.612502Z",
-     "shell.execute_reply": "2022-11-29T16:53:34.611078Z",
-     "shell.execute_reply.started": "2022-11-29T16:53:34.409585Z"
+     "iopub.execute_input": "2022-12-05T17:20:58.808483Z",
+     "iopub.status.busy": "2022-12-05T17:20:58.808208Z",
+     "iopub.status.idle": "2022-12-05T17:20:59.470794Z",
+     "shell.execute_reply": "2022-12-05T17:20:59.469956Z",
+     "shell.execute_reply.started": "2022-12-05T17:20:58.808456Z"
     },
     "tags": []
    },
@@ -222,20 +222,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are a total of 2667 indigenous businesses in this dataset\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'Series'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [11], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m indi \u001b[38;5;241m=\u001b[39m(data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindigenous\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124myes\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# how many indigenous businesses per province\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m group_indi_prov \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mprovince\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mindi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mcount()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndigenous businesses in each province\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(group_indi_prov)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/pandas/core/frame.py:7707\u001b[0m, in \u001b[0;36mDataFrame.groupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed, dropna)\u001b[0m\n\u001b[1;32m   7705\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m level \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m by \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   7706\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou have to supply one of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mby\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m and \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlevel\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 7707\u001b[0m axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_axis_number\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   7709\u001b[0m \u001b[38;5;66;03m# https://github.com/python/mypy/issues/7642\u001b[39;00m\n\u001b[1;32m   7710\u001b[0m \u001b[38;5;66;03m# error: Argument \"squeeze\" to \"DataFrameGroupBy\" has incompatible type\u001b[39;00m\n\u001b[1;32m   7711\u001b[0m \u001b[38;5;66;03m# \"Union[bool, NoDefault]\"; expected \"bool\"\u001b[39;00m\n\u001b[1;32m   7712\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m DataFrameGroupBy(\n\u001b[1;32m   7713\u001b[0m     obj\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m   7714\u001b[0m     keys\u001b[38;5;241m=\u001b[39mby,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   7722\u001b[0m     dropna\u001b[38;5;241m=\u001b[39mdropna,\n\u001b[1;32m   7723\u001b[0m )\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/pandas/core/generic.py:550\u001b[0m, in \u001b[0;36mNDFrame._get_axis_number\u001b[0;34m(cls, axis)\u001b[0m\n\u001b[1;32m    546\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[1;32m    547\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m    548\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_get_axis_number\u001b[39m(\u001b[38;5;28mcls\u001b[39m, axis: Axis) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m    549\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 550\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_AXIS_TO_AXIS_NUMBER\u001b[49m\u001b[43m[\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    551\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[1;32m    552\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo axis named \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m for object type \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'Series'"
+      "There are a total of 3925 indigenous businesses in this dataset\n",
+      "Indigenous businesses in each province\n",
+      "indigenous  province        \n",
+      "TRUE        BC                    1258\n",
+      "no          78                       1\n",
+      "            AB                   76642\n",
+      "            BC                  230761\n",
+      "            LAKEVIEW ESTATES         1\n",
+      "            MB                      16\n",
+      "            NB                     112\n",
+      "            NL                       1\n",
+      "            NS                       5\n",
+      "            NT                    1445\n",
+      "            ON                  242910\n",
+      "            QC                  244282\n",
+      "            SK                       6\n",
+      "            YT                       3\n",
+      "yes         AB                     455\n",
+      "            BC                     445\n",
+      "            MB                     208\n",
+      "            NB                      43\n",
+      "            NL                      32\n",
+      "            NS                      41\n",
+      "            NT                     118\n",
+      "            NU                     223\n",
+      "            ON                     680\n",
+      "            PE                       5\n",
+      "            QC                     245\n",
+      "            SK                     162\n",
+      "            YT                      10\n",
+      "Name: province, dtype: int64\n",
+      "Indigenous businesses per Naics codes\n",
+      "indigenous  NAICS_total\n",
+      "TRUE        11.0           121\n",
+      "            21.0            47\n",
+      "            22.0            12\n",
+      "            23.0           174\n",
+      "            31.0            37\n",
+      "                          ... \n",
+      "yes         62.0            52\n",
+      "            71.0            30\n",
+      "            72.0            32\n",
+      "            81.0            62\n",
+      "            91.0            27\n",
+      "Name: NAICS_total, Length: 73, dtype: int64\n",
+      "Indigenous businesses per Naics codes per province\n",
+      "indigenous  NAICS_total\n",
+      "TRUE        11.0           121\n",
+      "            21.0            47\n",
+      "            22.0            12\n",
+      "            23.0           174\n",
+      "            31.0            37\n",
+      "                          ... \n",
+      "yes         62.0            52\n",
+      "            71.0            30\n",
+      "            72.0            32\n",
+      "            81.0            62\n",
+      "            91.0            27\n",
+      "Name: province, Length: 73, dtype: int64\n"
      ]
     }
    ],
@@ -245,30 +290,26 @@
     "\n",
     "# how many total indigenous businesses there are \n",
     "count_unique_indi = (data['indigenous'] == 'yes')\n",
-    "count = sum(count_unique_indi)\n",
+    "count_unique_indi_True = (data['indigenous'] == 'TRUE')\n",
+    "count = sum(count_unique_indi) + sum(count_unique_indi_True)\n",
     "print(f'There are a total of {count} indigenous businesses in this dataset')\n",
     "\n",
-    "indi =(data['indigenous'] == 'yes')\n",
+    "\n",
     "\n",
     "# how many indigenous businesses per province\n",
-    "group_indi_prov = data.groupby('province', (indi) ).count()\n",
+    "group_indi_prov = data.groupby(['indigenous','province'])['province'].count()\n",
     "print('Indigenous businesses in each province')\n",
     "print(group_indi_prov)\n",
     "\n",
     "\n",
     "\n",
     "# how many indigenous businesses per Naics codes\n",
-    "group_indi_NAICS = data.groupby('indigenous')['NAICS_total'].count()\n",
+    "group_indi_NAICS = data.groupby(['indigenous','NAICS_total'])['NAICS_total'].count()\n",
     "print('Indigenous businesses per Naics codes')\n",
     "print(group_indi_NAICS)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# how many indigenous businesses per Naics codes per province\n",
-    "group_indi_NAICS_prov = data.groupby('indigenous')['NAICS_total']['province'].count()\n",
-    "print('Indigenous businesses per Naics codes per province')\n",
-    "print(group_indi_NAICS_prov)\n"
+    "\n"
    ]
   },
   {
