--- a/6-AssignCSDs/Assign_NAICS.ipynb
+++ b/6-AssignCSDs/Assign_NAICS.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:07:11.280428Z",
-     "iopub.status.busy": "2022-09-14T17:07:11.280148Z",
-     "iopub.status.idle": "2022-09-14T17:07:11.678087Z",
-     "shell.execute_reply": "2022-09-14T17:07:11.677281Z",
-     "shell.execute_reply.started": "2022-09-14T17:07:11.280400Z"
+     "iopub.execute_input": "2022-12-09T23:52:57.812473Z",
+     "iopub.status.busy": "2022-12-09T23:52:57.811923Z",
+     "iopub.status.idle": "2022-12-09T23:53:32.460723Z",
+     "shell.execute_reply": "2022-12-09T23:53:32.459448Z",
+     "shell.execute_reply.started": "2022-12-09T23:52:57.812426Z"
     },
     "tags": []
    },
@@ -22,37 +22,23 @@
     "import math\n",
     "\n",
     "\n",
-    "df = pd.read_csv(\"/home/jovyan/ODBiz/5a-Matching/output/matched.csv\")\n",
+    "df = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/CSDs.csv\",low_memory=False)\n",
     "\n",
     "# STEP 1\n",
     "# copy over NAICS values that already exist in the data\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "# This fills all the null values in the columns with 10 for analysis\n",
-    "df.primary_NAICS.fillna(value=10, inplace=True)\n",
+    "#df.primary_NAICS.fillna(value=10, inplace=True)\n",
     "\n",
     "\n",
     "\n",
-    "# print new column with only first two digits\n",
-    "\n",
-    "\n",
-    "#this is old code that has a ferw issues, keeping just in case\n",
-    "#def first_two(d):\n",
-    "    #return (d // 10 ** (int(math.log(d, 10)) - 1))\n",
-    "#df['NAICS_Group'] = df.primary_NAICS.apply(first_two)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# this one works better\n",
-    "df['NAICS_Group'] = df.index.astype(str).str[:2]\n",
-    "\n",
+    "df['NAICS_Group'] = df.primary_NAICS.astype(str).str[:2]\n",
     "\n",
     "\n",
     "# returns the 10 values back to null\n",
-    "df['primary_NAICS'] = df['primary_NAICS'].replace(10, '')\n",
-    "df['NAICS_Group'] = df['NAICS_Group'].replace(10, np.nan)\n",
+    "#df['primary_NAICS'] = df['primary_NAICS'].replace(10, '')\n",
+    "df['NAICS_Group'] = df['NAICS_Group'].replace('na', np.nan)\n",
     "\n",
     "\n",
     "\n",
@@ -85,6 +71,23 @@
     "pub = '91'\n",
     "\n",
     "\n",
+    "# Create a data object with our key values pairs\n",
+    "# sectors = ['agri', 'mining']\n",
+    "# codes = ['11', '21']\n",
+    "# df_sector_codes = pd.dataframe(secors, codes)\n",
+    "\n",
+    "\n",
+    "# loop through the object to check each column \n",
+    "# for sector codes and assign NAICS codes if so\n",
+    "\n",
+    "# for index in range(len(df_sector_codes)):\n",
+    "#     # df sector code at row = index\n",
+    "#     secotr = df_sector_codes.at('sectors', index)\n",
+    "#     secotr_code = df_sector_codes.at('codes', index)\n",
+    "#     df.loc[df['business_sector'].str.contains(secotr, case= False, na= False), 'NAICS_Group']= secotr_code\n",
+    "\n",
+    "\n",
+    "\n",
     "df.loc[df['business_sector'].str.contains(agri, case= False, na= False), 'NAICS_Group']= 11.0\n",
     "df.loc[df['business_sector'].str.contains(mining, case = False, na = False), 'NAICS_Group' ] = 21.0\n",
     "df.loc[df['business_sector'].str.contains(uti, case = False, na = False), 'NAICS_Group' ] = 22.0\n",
@@ -113,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:07:20.765744Z",
-     "iopub.status.busy": "2022-09-14T17:07:20.765472Z",
-     "iopub.status.idle": "2022-09-14T17:07:21.140227Z",
-     "shell.execute_reply": "2022-09-14T17:07:21.139440Z",
-     "shell.execute_reply.started": "2022-09-14T17:07:20.765716Z"
+     "iopub.execute_input": "2022-12-10T00:00:49.106757Z",
+     "iopub.status.busy": "2022-12-10T00:00:49.106131Z",
+     "iopub.status.idle": "2022-12-10T00:01:13.403610Z",
+     "shell.execute_reply": "2022-12-10T00:01:13.402108Z",
+     "shell.execute_reply.started": "2022-12-10T00:00:49.106720Z"
     },
     "tags": []
    },
@@ -191,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:07:58.771248Z",
-     "iopub.status.busy": "2022-09-14T17:07:58.770969Z",
-     "iopub.status.idle": "2022-09-14T17:07:58.954404Z",
-     "shell.execute_reply": "2022-09-14T17:07:58.953676Z",
-     "shell.execute_reply.started": "2022-09-14T17:07:58.771217Z"
+     "iopub.execute_input": "2022-12-10T00:01:57.049076Z",
+     "iopub.status.busy": "2022-12-10T00:01:57.048411Z",
+     "iopub.status.idle": "2022-12-10T00:02:16.129468Z",
+     "shell.execute_reply": "2022-12-10T00:02:16.128372Z",
+     "shell.execute_reply.started": "2022-12-10T00:01:57.049021Z"
     },
     "tags": []
    },
@@ -224,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:08:01.687385Z",
-     "iopub.status.busy": "2022-09-14T17:08:01.687116Z",
-     "iopub.status.idle": "2022-09-14T17:08:01.920564Z",
-     "shell.execute_reply": "2022-09-14T17:08:01.919673Z",
-     "shell.execute_reply.started": "2022-09-14T17:08:01.687356Z"
+     "iopub.execute_input": "2022-12-10T00:03:09.635216Z",
+     "iopub.status.busy": "2022-12-10T00:03:09.634282Z",
+     "iopub.status.idle": "2022-12-10T00:03:28.856053Z",
+     "shell.execute_reply": "2022-12-10T00:03:28.855056Z",
+     "shell.execute_reply.started": "2022-12-10T00:03:09.635183Z"
     },
     "tags": []
    },
@@ -255,18 +258,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:08:04.295695Z",
-     "iopub.status.busy": "2022-09-14T17:08:04.295416Z",
-     "iopub.status.idle": "2022-09-14T17:08:04.772925Z",
-     "shell.execute_reply": "2022-09-14T17:08:04.772116Z",
-     "shell.execute_reply.started": "2022-09-14T17:08:04.295666Z"
+     "iopub.execute_input": "2022-12-10T00:38:53.343476Z",
+     "iopub.status.busy": "2022-12-10T00:38:53.342491Z",
+     "iopub.status.idle": "2022-12-10T00:39:33.100499Z",
+     "shell.execute_reply": "2022-12-10T00:39:33.098989Z",
+     "shell.execute_reply.started": "2022-12-10T00:38:53.343437Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_40870/2021699885.py:47: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  df.loc[df['NAICS_Group'].str.contains(acco, case= False, na= False), 'NAICS_Group']= 72.0\n"
+     ]
+    }
+   ],
    "source": [
     "# STEP 6\n",
     "# using keywords fill in\n",
@@ -278,22 +290,22 @@
     "agri = 'agriculture|cultivation|breeding'\n",
     "mining = 'mining'\n",
     "uti = 'utilities'\n",
-    "cons = 'construction|building|contractors|cement|contractor|ecavating|excavating|excavation|installation'\n",
+    "cons = 'construction|building|contractors|cement|contractor|plumber|ecavating|excavating|excavation|installation|irrigation'\n",
     "mani = 'manifacturing|manufacturer|Manufacturing|mfg.|printing|printer|Manufacturer'\n",
     "whole = 'wholesale|whlse.'\n",
-    "retail = 'retail|store|supplies|clothing|sales|dealer|pharmacy|fueling'\n",
-    "trans = 'transportation|courier|warehouse|warehousing|trucking'\n",
+    "retail = 'retail|store|supplies|clothing|sales|dealer|pharmacy|fueling|shop'\n",
+    "trans = 'transportation|courier|warehouse|warehousing|trucking|transport'\n",
     "info = 'information|publishing|animation|production'\n",
     "fin = 'finance|bank|bookkeeping|broker|financial|currency|credit|insurance|investment'\n",
-    "real = 'apartment|property|hall|real|property'\n",
+    "real = 'apartment|property|hall|real|property|dwelling|duplex|suite'\n",
     "prof = 'accountant|veterinarian|research|lawyer|law|advertising|architect|consulting|consultant|agent|counselling|publisher|design|development|engineer|solicitor|graphic'\n",
     "mang = 'enterprises|Management'\n",
     "admin = 'waste|administration|agency|cleaning|janitorial|security'\n",
     "edu = 'educational|education|instruction|tutor|school|schools|training|teacher|tutoring'\n",
-    "health = 'health|Psychiatrist|pathologist|Therapies|therapy|Oculist|acupuncturist|chiropractor|dentist|clinic|denturist|Psychologist|doctor|RMT|pediatric|hospital|therapist|laboratory|physician|dental|psychological|Podiatrist|GASTROENTEROLOGIST|Physiotherapy|Optometrist'\n",
+    "health = 'health|Psychiatrist|pathologist|Therapies|therapy|Oculist|acupuncturist|nursing|chiropractor|dentist|clinic|denturist|Psychologist|doctor|RMT|pediatric|hospital|therapist|laboratory|physician|dental|psychological|Podiatrist|GASTROENTEROLOGIST|Physiotherapy|Optometrist'\n",
     "arts = 'arts|studio|dance|entertainment|event|fitness|film|photographer|recreation|amusement'\n",
-    "acco = 'accommodation|lodging|restaurant|motel|(rental unit)|cafe|caterer|casino|dining|food|hotel|Bed and Breakfast|Restaurant|patio|liquor'\n",
-    "other = 'Auto|barber|beauty|funeral|repair|charitable|charity|association|spa|dating|Esthetician|personal|hairdresser|hairdressing|hair|massage'\n",
+    "acco = 'accommodation|lodging|restaurant|motel|(rental unit)|eating|cafe|caterer|casino|dining|food|hotel|Bed and Breakfast|Restaurant|patio|liquor'\n",
+    "other = 'Auto|barber|beauty|funeral|psychic|repair|charitable|charity|laundry|association|spa|dating|Esthetician|personal|hairdresser|hairdressing|hair|massage'\n",
     "pub = 'public'\n",
     "\n",
     "\n",
@@ -326,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:08:19.787418Z",
-     "iopub.status.busy": "2022-09-14T17:08:19.787119Z",
-     "iopub.status.idle": "2022-09-14T17:08:19.978729Z",
-     "shell.execute_reply": "2022-09-14T17:08:19.978015Z",
-     "shell.execute_reply.started": "2022-09-14T17:08:19.787388Z"
+     "iopub.execute_input": "2022-12-10T00:39:37.716081Z",
+     "iopub.status.busy": "2022-12-10T00:39:37.715321Z",
+     "iopub.status.idle": "2022-12-10T00:39:56.101799Z",
+     "shell.execute_reply": "2022-12-10T00:39:56.100652Z",
+     "shell.execute_reply.started": "2022-12-10T00:39:37.716028Z"
     },
     "tags": []
    },
@@ -493,9 +505,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:odbiz]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-odbiz-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -507,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
