--- a/6-AssignCSDs/Assign_CSD.ipynb
+++ b/6-AssignCSDs/Assign_CSD.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:06:23.063504Z",
-     "iopub.status.busy": "2022-09-14T17:06:23.063031Z",
-     "iopub.status.idle": "2022-09-14T17:06:26.423265Z",
-     "shell.execute_reply": "2022-09-14T17:06:26.422432Z",
-     "shell.execute_reply.started": "2022-09-14T17:06:23.063475Z"
+     "iopub.execute_input": "2022-12-09T23:07:46.215558Z",
+     "iopub.status.busy": "2022-12-09T23:07:46.214271Z",
+     "iopub.status.idle": "2022-12-09T23:09:47.156030Z",
+     "shell.execute_reply": "2022-12-09T23:09:47.154955Z",
+     "shell.execute_reply.started": "2022-12-09T23:07:46.215506Z"
     },
     "tags": []
    },
@@ -20,9 +20,15 @@
     "\"\"\"\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
     "import geopandas as gpd\n",
     "\n",
-    "df=pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/Sample.csv\", low_memory=False, dtype='str') #file to read in \n",
+    "df=pd.read_csv(\"/home/jovyan/ODBiz/5b-Geocoding/data/output/geocoded.csv\", low_memory=False, dtype='str') #file to read in \n",
+    "\n",
     "\n",
     "\n",
     "gdf = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df['longitude'], df['latitude']))\n",
@@ -30,7 +36,7 @@
     "\n",
     "\n",
     "#read in Statcan boundary file\n",
-    "CSD = gpd.read_file(\"/home/jovyan/ODBiz/6-AssignCSDs/CSD_shapefile/lcsd000a16a_e.shx\")\n",
+    "CSD = gpd.read_file(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/CSD_shapefile/lcsd000a16a_e.shx\")\n",
     "CSD=CSD[['CSDUID', 'CSDNAME','PRUID', 'geometry']]\n",
     "\n",
     "#convert geometry of addresses to statcan geometry\n",
@@ -44,7 +50,7 @@
     "\n",
     "\n",
     "\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Test_CSDs.csv', index=False) #outputted file with CSDs\n"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/CSDs.csv', index=False) #outputted file with CSDs\n"
    ]
   },
   {
@@ -57,9 +63,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:odbiz]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-odbiz-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -71,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
